# aws-mcp-servers-samples

./: .gitignore  .gitmodules  README.md
aos-mcp-serverless/: .gitignore  README.md  aos_serverless_mcp_setup.sh  app.py  cleanup_aos_mcp.sh  requirements.txt  samconfig.toml  template.yaml
aos-mcp-serverless/aos_setup/aos_cdk/: README.md  app.ts  cdk.context.json  cdk.json  opensearch-config.json  package-lock.json  package.json  tsconfig.json
aos-mcp-serverless/aos_setup/aos_cdk/cdk.out/: OpenSearchStack.assets.json  manifest.json  (+4 more)
aos-mcp-serverless/aos_setup/aos_public_setup/: README.md  cdk.json  deploy.sh  opensearch-config.json  package-lock.json  package.json
aos-mcp-serverless/aos_setup/doc_ingest/: aos_client.py  doc_ingest.py  knowledge.txt  requirements.txt
aos-mcp-serverless/aos_setup/tools/: embedding.py
aos-mcp-serverless/serverless-mcp-setup/: README.md  app.py  requirements.txt  samconfig.toml  template.yaml
aos-mcp-serverless/serverless-mcp-setup/authorizer/: app.py  requirements.txt
aos-mcp-serverless/strands_agent_test/: similarity_search.py  similarity_search_demo.py
deepseek-code-generator/: .env.example  README.md  pyproject.toml
deepseek-code-generator/src/: __init__.py  server.py
deepseek-code-generator/src/deepseek_coder_generator_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
html_render_service/web/: requirements.txt
s3_upload_server/: README.md  pyproject.toml  test_server.py
s3_upload_server/src/: server.py
s3_upload_server_for_agentcore/: README.md  clean-up.py  remote_deploy.py  utils.py
(+7 files in other folders)
